--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <section>
 
         <div class="container">
-            <div class="w-50 py-5">
+            <div class="w-50 pt-5 pb-2">
                 <h2 class="display-4 fw-bold text-light">Todo en productos Tecnológicos</h2>
                 <p id="description" class="text-light">Explora nuestra amplia selección de productos tecnológicos con
                     descuentos exclusivos. Desde laptops y
@@ -10,7 +10,7 @@
                     actualizado!</p>
             </div>
             <div>
-                <button>
+                <button class="btn btn-dark" [routerLink]="['/product']">
                     Ver productos
                 </button>
             </div>
