--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,15 @@
           <div class="collapse navbar-collapse ms-4" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link text-white" [routerLink]="['/home']">Inicio</a>
-              <a class="nav-link" [routerLink]="['/home']">Inicio</a>
+              <a class="nav-link text-white" [routerLink]="['/product']">Productos</a>
+              <a class="nav-link text-white" [routerLink]="['/purchase-history']">Historial de compras</a>
+              <button [routerLink]="['/cart']" type="button" class="btn btn-warning position-relative">
+                <i class="bi bi-cart4"></i>
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                  {{ cartItemCount }}
+                  <span class="visually-hidden">unread messages</span>
+                </span>
+              </button>
             </div>
           </div>
         </div>
