--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,4 @@
-form{    
+form {
     width: 25rem;
-    background: rgb(2, 0, 36);
-    background: linear-gradient(0deg, rgba(2, 0, 36, 1) 0%, rgba(10, 8, 110, 1) 28%, rgba(0, 212, 255, 1) 100%);
+    background-color: rgb(163, 211, 223);
 }
-
