--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,11 +5,11 @@
             
             <form class="border rounded p-4">
                 <div class="mb-3">
-                    <label for="inputUser" class="form-label fw-bold fs-5">Usuario</label>
+                    <label for="inputUser" class="form-label  fs-5">Usuario</label>
                     <input type="text" [(ngModel)]="username" name="username" class="form-control" id="inputUser" aria-describedby="userHelp">                    
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword" class="form-label fw-bold fs-5">Contraseña</label>
+                    <label for="exampleInputPassword" class="form-label  fs-5">Contraseña</label>
                     <input type="password" [(ngModel)]="password" name="password" class="form-control" id="exampleInputPassword">
                 </div>              
                 <button type="button" (click)="login()"  class="btn btn-primary w-100">Ingresar</button>
