--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row">
               <div class="col-md-4" *ngFor="let product of products">
-                <div class="card mb-4">
+                <div class="card mb-4 shadow">
                   <div class="d-flex justify-content-center"><img [src]="'../../assets/img/' + product.id + '.jpg'" class="card-img-top" alt="{{ product.name }}"></div>
                   <div class="card-body">
                     <h5 class="card-title">{{ product.name | uppercase }}</h5>                    
